# OJ_work

./: .gitignore
2023-4-loops/: CMakeLists.txt  formation.c  life.c  matrix-mult.c  mines.c  obstacle.c  statistics.c  sudoku.c  trace.c
2023-5-function/: CMakeLists.txt  absolute-prime.c  magic-square.c  next-permutation.c  pair.c  radix.c  sum.c
exam1/: Bye-JonaBell.c  CMakeLists.txt  reverse.c  tictactoe.c
