cmake_minimum_required(VERSION 3.26)
project(2023_5_function C)

set(CMAKE_C_STANDARD 11)

add_executable(sum sum.c)
add_executable(magic-square magic-square.c)
add_executable(absolute-prime absolute-prime.c)
add_executable(radix radix.c)
add_executable(next-permutation next-permutation.c)
add_executable(pair pair.c)